--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,69 @@
-.App {
+.site-layout-content {
+  background: #fff;
+  padding: 24px;
+  min-height: 280px;
+  /*border: lightcoral;*/
+}
+
+#components-layout-demo-top .logo {
+  width: 120px;
+  height: 31px;
+  background: rgba(228, 166, 116, 0.192);
+  margin: 16px 24px 16px 0;
+  float: left;
+}
+h1{
+  text-align: center;
+  color: salmon;
+  font-size: 100px;
+  font-weight: 50px;
+}
+#h2Especial{
+  text-align: center;
+  color: salmon;
+  font-size: 50px;
+  font-weight: 20px;
+}
+p{
+  text-align: justify;
+}
+
+.site-page-header-ghost-wrapper {
+  background-color: #f5f5f5;
+  padding: 24px;
+}
+.claseEstilo{
+  border-spacing:100px 5px; /*Separación de la tabla*/
+  text-align: center;
+  margin: 0 auto; /*Centrar tabla*/
+  border: none;
+  width: 100%;
+  border-collapse: collapse;
+}
+.layout{
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  background-color:cornsilk;
+  font-size: 15px;
+}
+.footer{
+  text-align: center;
+  background-color:cornsilk;
+}
+.boton{
+  background-color: transparent;
+	color: white;
+  text-decoration: none;
+  padding-bottom: 20px;
+	display: block;
+  outline: none;
+  font-family: Georgia;
+  font-size: 15px;
+  border: 0px;
+}
+
+
+
+/* .App {
   text-align: center;
 }
 
@@ -34,5 +99,5 @@
   }
   to {
     transform: rotate(360deg);
-  }
-}
+  } 
+}*/
